# hadith-api

./: README.md
api/: Cargo.toml
api/src/: main.rs  model.rs
scrapper/: index.js  package.json
