[package]
name = "api"
version = "0.1.0"
authors = ["adeyahya <adeyahyaprasetyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
dotenv = "0.15.0"
anyhow = "1.0.28"
env_logger = "0.7.1"
log = "0.4.8"
serde = "1.0.106"
serde_json = "1.0.51"
futures = "0.3.6"
qstring = "0.7.2"
